--- a/nmsl/style.css
+++ b/nmsl/style.css
@@ -3,7 +3,7 @@
 width: 100%;
 height: 250px;
 /*LETAKKAN GAMBAR HEADER */
-background: url ('gambar/banner-jpg');
+background: url('gambar/banner.jpg');
 background-size: cover;
 color: black;
 text-align: left;
