--- a/nmsl/style.css
+++ b/nmsl/style.css
@@ -86,7 +86,7 @@ flex-wrap: wrap;
     text-align: center;
     }
 
-/*UNTUK SAIZ IME] */
+/*UNTUK SAIZ IMEJ */
 .product-image {
 width: 50%;
 height: auto;
