--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 background: #f5cce0;
 }
 /*UNTUK WRAP */
-.wrapperf{ 
+.wrapper{ 
 display:flex; 
 flex-direction:row; 
 justify-content :left; 
